# microbity

./: .gitignore  Cargo.toml  Embed.toml  README.org  build.rs  memory-nrf52833-with-softdevice.x
.cargo/: config.toml
assets/: README  bad-apple.raw
src/: main.rs  raw_led.rs
src/app/: beeper.rs  ble_temp.rs  i2c_display.rs  midi_player.rs  mod.rs  pcm_player.rs  playground.rs  temp.rs  tone_generator.rs  volume.rs
src/raw/: clock.rs  led.rs  microphone.rs  mod.rs  serial.rs
