[package]
name = "microbity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
fixed = "1.26.0"
heapless = "0.7.16"
microbit-v2 = { git = "https://github.com/nrf-rs/microbit", branch = "main" }
midly = { version = "0.5.3", default-features = false }
# panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[features]
default = ["app_midi_player"]
app_temp = []
app_volume = []
app_playground = []
app_i2c_display = []
app_pcm_player = []
app_midi_player = []
