[package]
name = "microbity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-time = "0.12.1"
fixed = "1.26.0"
heapless = "0.7.16"
microbit-v2 = { git = "https://github.com/nrf-rs/microbit", branch = "main" }
micromath = {version = "2.1.0", optional = true }
midly = { version = "0.5.3", default-features = false, optional = true }
# panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
embassy-nrf = { version = "0.1.0", features = ["nrf52833", "gpiote", "time-driver-rtc1"] }
static_cell = "2.0.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = "0.3.0"
# on which softdevice sdk to use
# https://infocenter.nordicsemi.com/index.jsp?topic=%2Fug_gsg_ses%2FUG%2Fgsg%2Fsoftdevices.html
# download at https://www.nordicsemi.com/Products/Development-software/s113/download
#
nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "critical-section-impl", "s113", "nrf52833"] }

[features]
default = ["app_ble_temp"]
app_temp = []
app_volume = []
app_playground = []
app_i2c_display = []
app_pcm_player = []
app_midi_player = ["dep:midly", "dep:micromath"]
app_tone_generator = ["dep:micromath"]
app_ble_temp = ["softdevice"]

softdevice = []
